--- a/templates/error.html
+++ b/templates/error.html
@@ -2,14 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title" content="My Personal Word List">
+    <meta property="og:description" content="A collection of my words">
+    <meta property="og:image" content="{{ url_for('static', filename='logo_red.png') }}">
+    <link rel="shortcut icon" href="/static/favico.ico" type="image/x-icon">
+    <link rel="icon" href="/static/favico.ico" type="image/x-icon">
+
+    <title>Error Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="{{ url_for('static', filename='mystyle.css') }}" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Error</h1>
-    <p>{{ msg }}</p>
+    <div class="wrap">
+        <div class="banner" onclick="window.location.href = '/'">
+        </div>
+
+        <div class="container">
+            <h1>Error</h1>
+            <p>{{ msg }}</p>
+        </div>
+    </div>
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home page</a></li>
+            </ul>
+            <p class="text-center text-muted">© 2023 Zans Company.</p>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
