--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="My Personal Word List">
     <meta property="og:description" content="A collection of my words">
     <meta property="og:image" content="{{ url_for('static', filename='logo_red.png') }}">
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favico.ico" type="image/x-icon">
+    <link rel="icon" href="/static/favico.ico" type="image/x-icon">
 
     <title>Personal diary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
